<resources>
    <string name="app_name">SampleApp</string>

    <string name="linear_layout">androidx.recyclerview.widget.LinearLayoutManager</string>

    <string name="bttn_visualize_gfycat_token">Visualize Gfycat Token</string>
    <string name="bttn_visualize_redgifs_token">Visualize Redgifs Token</string>
    <string name="bttn_refresh_token">Refresh Token</string>
    <string name="bttn_get_gfycats">Get Gfycat</string>
    <string name="bttn_get_gfycats_from_url">Get Gfycat from Url</string>
    <string name="bttn_search_gfycat">Search Gfycat</string>
    <string name="bttn_self">Self User</string>
    <string name="bttn_following">Following</string>
    <string name="bttn_followers">Followers</string>
    <string name="bttn_get_user">Get User</string>
    <string name="bttn_get_user_feed">Get User Feed</string>
    <string name="bttn_stickers">Stickers</string>
    <string name="bttn_stickers_search">Stickers Search</string>
    <string name="bttn_reactions">Reactions</string>
    <string name="bttn_reaction_search">Reaction Search</string>
    <string name="bttn_trending_gfycats">Trending Gfycat</string>
    <string name="bttn_trending_tags">Trending Tags</string>
    <string name="bttn_ok">OK</string>

    <string name="no_items">No items to show.</string>

    <string name="edit_insert_query">Insert query:</string>
    <string name="bttn_get_redgifs">Get Redgifs</string>
    <string name="bttn_get_redgifs_from_url">Get Redgifs from Url</string>
</resources>
