<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_visualize_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_visualize_token"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_get_gfycats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_get_gfycats"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_self"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_self"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_following"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_followers"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_get_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_get_user"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_get_user_feed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_get_user_feed"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_stickers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_stickers"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_stickers_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_stickers_search"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_reactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_reactions"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_reaction_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_reaction_search"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_trenting_gfycats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_trending_gfycats"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bttn_trenting_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bttn_trending_tags"
                />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>